--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>WebGPU Life</title>
   </head>
   <body>
-    <canvas width="512" height="512"></canvas>
+    <canvas width="1024" height="1024"></canvas>
     <script type="module">
+      const GRID_SIZE = 64;
+
       const canvas = document.querySelector("canvas");
 
       // Your WebGPU code will begin here!
@@ -29,6 +31,15 @@
         device: device,
         format: canvasFormat,
       });
+
+      // Create a uniform buffer that describes the grid.
+      const uniformArray = new Float32Array([GRID_SIZE, GRID_SIZE]);
+      const uniformBuffer = device.createBuffer({
+        label: "Grid Uniforms",
+        size: uniformArray.byteLength,
+        usage: GPUBufferUsage.UNIFORM | GPUBufferUsage.COPY_DST,
+      });
+      device.queue.writeBuffer(uniformBuffer, 0, uniformArray);
 
       const vertices = new Float32Array([
         //   X,    Y,
@@ -69,11 +80,18 @@
       const cellShaderModule = device.createShaderModule({
         label: "Cell shader",
         code: `
-
+@group(0) @binding(0) var<uniform> grid: vec2f;
 @vertex
-fn vertexMain(@location(0) pos: vec2f) ->
+fn vertexMain(@location(0) pos: vec2f,
+              @builtin(instance_index) instance: u32) ->
   @builtin(position) vec4f {
-  return vec4f(pos, 0, 1);
+  
+  let i = f32(instance); // Save the instance_index as a float
+  let cell = vec2f(i % grid.x, floor(i / grid.x));
+  let cellOffset = cell / grid * 2; // Updated
+  let gridPos = (pos + 1) / grid - 1 + cellOffset;
+
+  return vec4f(gridPos, 0, 1);
 }
 
 // location(0) is the first colorAttachment in beginRenderPass
@@ -103,6 +121,17 @@ fn fragmentMain() -> @location(0) vec4f {
         },
       });
 
+      const bindGroup = device.createBindGroup({
+        label: "Cell renderer bind group",
+        layout: cellPipeline.getBindGroupLayout(0),
+        entries: [
+          {
+            binding: 0,
+            resource: { buffer: uniformBuffer },
+          },
+        ],
+      });
+
       const encoder = device.createCommandEncoder();
 
       const pass = encoder.beginRenderPass({
@@ -117,7 +146,9 @@ fn fragmentMain() -> @location(0) vec4f {
       });
       pass.setPipeline(cellPipeline);
       pass.setVertexBuffer(0, vertexBuffer);
-      pass.draw(vertices.length / 2); // 6 vertices
+
+      pass.setBindGroup(0, bindGroup);
+      pass.draw(vertices.length / 2, GRID_SIZE * GRID_SIZE); // 6 vertices
       pass.end();
       device.queue.submit([encoder.finish()]);
     </script>
