--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
     <canvas width="1024" height="1024"></canvas>
     <script type="module">
+      const UPDATE_INTERVAL = 200; // Update every 200ms (5 times/sec)
+      let step = 0; // Track how many simulation steps have been run
       const GRID_SIZE = 64;
+      const WORKGROUP_SIZE = 8;
 
       const canvas = document.querySelector("canvas");
 
@@ -77,27 +80,88 @@
         ],
       };
 
+      // Create an array representing the active state of each cell.
+      const cellStateArray = new Uint32Array(GRID_SIZE * GRID_SIZE);
+
+      // Create two storage buffers to hold the cell state.
+      const cellStateStorage = [
+        device.createBuffer({
+          label: "Cell State A",
+          size: cellStateArray.byteLength,
+          usage: GPUBufferUsage.STORAGE | GPUBufferUsage.COPY_DST,
+        }),
+        device.createBuffer({
+          label: "Cell State B",
+          size: cellStateArray.byteLength,
+          usage: GPUBufferUsage.STORAGE | GPUBufferUsage.COPY_DST,
+        }),
+      ];
+      // Mark every third cell of the first grid as active.
+      for (let i = 0; i < cellStateArray.length; i += 3) {
+        cellStateArray[i] = 1;
+      }
+      device.queue.writeBuffer(cellStateStorage[0], 0, cellStateArray);
+
+      // Mark every other cell of the second grid as active.
+      for (let i = 0; i < cellStateArray.length; i++) {
+        cellStateArray[i] = i % 2;
+      }
+      device.queue.writeBuffer(cellStateStorage[1], 0, cellStateArray);
+
+      // Create the compute shader that will process the simulation.
+      const simulationShaderModule = device.createShaderModule({
+        label: "Game of Life simulation shader",
+        code: `
+@group(0) @binding(0) var<uniform> grid: vec2f;
+    
+// New lines
+@group(0) @binding(1) var<storage> cellStateIn: array<u32>;
+@group(0) @binding(2) var<storage, read_write> cellStateOut: array<u32>;
+
+@compute @workgroup_size(${WORKGROUP_SIZE}, ${WORKGROUP_SIZE})
+fn computeMain(@builtin(global_invocation_id) cell: vec3u) {
+
+}
+`,
+      });
+
       const cellShaderModule = device.createShaderModule({
         label: "Cell shader",
         code: `
-@group(0) @binding(0) var<uniform> grid: vec2f;
-@vertex
-fn vertexMain(@location(0) pos: vec2f,
-              @builtin(instance_index) instance: u32) ->
-  @builtin(position) vec4f {
-  
-  let i = f32(instance); // Save the instance_index as a float
-  let cell = vec2f(i % grid.x, floor(i / grid.x));
-  let cellOffset = cell / grid * 2; // Updated
-  let gridPos = (pos + 1) / grid - 1 + cellOffset;
+struct VertexInput {
+  @location(0) pos: vec2f,
+  @builtin(instance_index) instance: u32,
+};
 
-  return vec4f(gridPos, 0, 1);
+struct VertexOutput {
+  @builtin(position) pos: vec4f,
+  @location(0) cell: vec2f,
+};
+
+@group(0) @binding(0) var<uniform> grid: vec2f;
+@group(0) @binding(1) var<storage> cellState: array<u32>;
+
+@vertex
+fn vertexMain(input: VertexInput) -> VertexOutput  {
+  let i = f32(input.instance);
+  let cell = vec2f(i % grid.x, floor(i / grid.x));
+  let state = f32(cellState[input.instance]);
+  let cellOffset = cell / grid * 2;
+  let gridPos = (input.pos*state+1) / grid - 1 + cellOffset;
+  
+  var output: VertexOutput;
+  output.pos = vec4f(gridPos, 0, 1);
+  output.cell = cell;
+  return output;
 }
 
 // location(0) is the first colorAttachment in beginRenderPass
+
 @fragment
-fn fragmentMain() -> @location(0) vec4f {
-  return vec4f(0.73, 0.22, 0.008, 1); // (Red, Green, Blue, Alpha)
+fn fragmentMain(input: VertexOutput) -> @location(0) vec4f {
+  let c = input.cell / grid;
+  let inv_blue = max(c.x, c.y);
+  return vec4f(c, 1-inv_blue, 1);
 }
   `,
       });
@@ -121,36 +185,66 @@ fn fragmentMain() -> @location(0) vec4f {
         },
       });
 
-      const bindGroup = device.createBindGroup({
-        label: "Cell renderer bind group",
-        layout: cellPipeline.getBindGroupLayout(0),
-        entries: [
-          {
-            binding: 0,
-            resource: { buffer: uniformBuffer },
-          },
-        ],
-      });
+      const bindGroups = [
+        device.createBindGroup({
+          label: "Cell renderer bind group A",
+          layout: cellPipeline.getBindGroupLayout(0),
+          entries: [
+            {
+              binding: 0,
+              resource: { buffer: uniformBuffer },
+            },
+            {
+              binding: 1,
+              resource: { buffer: cellStateStorage[0] },
+            },
+          ],
+        }),
+        device.createBindGroup({
+          label: "Cell renderer bind group B",
+          layout: cellPipeline.getBindGroupLayout(0),
+          entries: [
+            {
+              binding: 0,
+              resource: { buffer: uniformBuffer },
+            },
+            {
+              binding: 1,
+              resource: { buffer: cellStateStorage[1] },
+            },
+          ],
+        }),
+      ];
+      // Move all of our rendering code into a function
+      function updateGrid() {
+        step++; // Increment the step count
 
-      const encoder = device.createCommandEncoder();
+        // Start a render pass
+        const encoder = device.createCommandEncoder();
+        const pass = encoder.beginRenderPass({
+          colorAttachments: [
+            {
+              view: context.getCurrentTexture().createView(),
+              loadOp: "clear",
+              clearValue: { r: 0, g: 0, b: 0.4, a: 1.0 },
+              storeOp: "store",
+            },
+          ],
+        });
 
-      const pass = encoder.beginRenderPass({
-        colorAttachments: [
-          {
-            view: context.getCurrentTexture().createView(),
-            loadOp: "clear",
-            clearValue: { r: 0.15, g: 0.43, b: 0.2, a: 1 },
-            storeOp: "store",
-          },
-        ],
-      });
-      pass.setPipeline(cellPipeline);
-      pass.setVertexBuffer(0, vertexBuffer);
+        // Draw the grid.
+        pass.setPipeline(cellPipeline);
+        pass.setBindGroup(0, bindGroups[step % 2]); // Updated!
+        pass.setVertexBuffer(0, vertexBuffer);
+        pass.draw(vertices.length / 2, GRID_SIZE * GRID_SIZE);
 
-      pass.setBindGroup(0, bindGroup);
-      pass.draw(vertices.length / 2, GRID_SIZE * GRID_SIZE); // 6 vertices
-      pass.end();
-      device.queue.submit([encoder.finish()]);
+        // End the render pass and submit the command buffer
+        pass.end();
+        device.queue.submit([encoder.finish()]);
+      }
+
+      // Schedule updateGrid() to run repeatedly
+      setInterval(updateGrid, UPDATE_INTERVAL);
     </script>
   </body>
 </html>
